<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dk.cphbusiness.masterdetailtemplate.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <Button
        android:id="@+id/peopleButton"
        android:text="@string/peopleButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonPressed"
        />

    <Button
        android:id="@+id/serviceButton"
        android:text="@string/serviceButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonPressed"
        />

    <Button
        android:id="@+id/openGLButton"
        android:text="@string/openGLButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonPressed"
        />

    <Button
        android:id="@+id/openGLESButton"
        android:text="@string/openGLESButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonPressed"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/ipText"
            android:hint="IP address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text|number"
            android:ems="10" />

        <Button
            android:id="@+id/restButton"
            android:text="@string/restButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="buttonPressed"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>
